--- a/base.html
+++ b/base.html
@@ -5,30 +5,90 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Курсы</title>
 <style>
-body, html {
-  margin: 0;
-  padding: 0;
-  font-family: Arial, sans-serif;
+
+.user-profile {
+  position: relative;
+  display: inline-block;
 }
+
+.user-avatar {
+  width: 40px; /* или любой другой размер, который тебе подходит */
+  height: 40px;
+  border-radius: 50%; /* делает изображение круглым */
+  cursor: pointer;
+}
+
+.profile-menu {
+  border-radius: 10px; 
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.profile-menu a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.profile-menu a:hover {
+  background-color: #f1f1f1;
+  border-radius: 10px; 
+}
+
+
+.user-avatar:hover + .profile-menu { 
+  display: block;
+}
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: 'Onest', Arial, sans-serif;
+}
+
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #333;
+  background-color: #408FFF;
   padding: 10px 20px;
   color: white;
 }
 #logo {
-  width: 100px; /* Измени значение в зависимости от желаемого размера логотипа */
+  width: 100px; 
 }
 nav a {
   color: white;
   text-decoration: none;
   margin-left: 20px;
 }
-#search {
-  padding: 5px;
+.search-box {
+  position: relative;
+  display: flex;
+  align-items: center;
 }
+
+#search {
+  padding: 5px 5px 5px 35px; /* Значение слева увеличено, чтобы сделать место для иконки */
+  border-radius: 20px;
+  border: 1px solid #408FFF;
+  outline: none; /* Убирает стандартный outline, чтобы не мешал дизайну */
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.search-box::before {
+  content: url('search.svg'); /* Поменяй на путь к твоей иконке */
+  position: absolute;
+  left: 10px;
+  pointer-events: none; /* Это сделает так, чтобы на иконку нельзя было нажать */
+}
+
 #course-list {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
@@ -36,12 +96,21 @@ nav a {
   padding: 20px;
 }
 .course-card {
-  border: 1px solid #ccc;
-  border-radius: 5px;
+  border: 1px solid #408FFF;
+  border-radius: 20px;
   padding: 10px;
   cursor: pointer;
   transition: transform 0.2s;
 }
+
+.course-card img {
+  width: 100%;
+  border-radius: 10px;
+  height: auto;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+}
+
 .course-card:hover {
   transform: scale(1.05);
 }
@@ -50,43 +119,78 @@ nav a {
 <body>
 
 <header>
-  <img src="logo.png" alt="Логотип" id="logo">
+  <img src="logo.svg" alt="Логотип" id="logo">
   <nav id="navbar">
     <a href="#">Домой</a>
     <a href="#">Курсы</a>
-    <a href="#">Контакты</a>
+    <a href="#">Мое</a>
   </nav>
-  <input type="search" id="search" placeholder="Поиск...">
+  <div class="search-box">
+    <input type="search" id="search" placeholder="Найти...">
+  </div>
+  <div class="user-profile">
+    <img src="avatar.png" alt="Профиль" class="user-avatar">
+    <div class="profile-menu">
+      <a href="#">Профиль</a>
+      <a href="#">Настройки</a>
+      <!-- Добавьте сюда другие пункты меню -->
+    </div>
+  </div>
+  
 </header>
 <main id="course-list">
   <!-- Карточки курсов будут тут -->
 </main>
 
 <script>
-// Предположим, у нас есть массив объектов с информацией о курсах
+	// Мы добавили URL изображений в объекты курсов
 const courses = [
-  { id: 1, title: 'Курс JavaScript', description: 'Изучите JavaScript с нуля' },
-  // Добавь сюда другие курсы
+  { id: 1, title: 'Курс JavaScript', description: 'Изучите JavaScript с нуля.', imageUrl: 'media/JS.png' },
+  { id: 2, title: 'Курс C#', description: 'Изучите C#', imageUrl: 'media/gamedev.png' },
+  { id: 3, title: 'Курс HTML', description: 'Изучите HTML.', imageUrl: 'media/DB.png' },
+  { id: 4, title: 'Курс Python', description: 'Изучите Python.', imageUrl: 'media/Py.png' },
+  { id: 5, title: 'Курс Java', description: 'Изучите Java.', imageUrl: 'media/Py.png' },
+  { id: 6, title: 'Курс C++', description: 'Изучите C++.', imageUrl: 'media/Py.png' }
+
 ];
 
 function createCourseCard(course) {
   const card = document.createElement('div');
   card.classList.add('course-card');
   card.innerHTML = `
+    <img src="${course.imageUrl}" alt="${course.title}">
     <h3>${course.title}</h3>
     <p>${course.description}</p>
   `;
   card.onclick = function() {
-    // Место для кода модального окна для записи на курс
     alert('Записаться на курс: ' + course.title);
   };
   return card;
 }
 
+// 
 const courseList = document.getElementById('course-list');
 courses.forEach(course => {
   courseList.appendChild(createCourseCard(course));
 });
+
+// JavaScript для открытия и закрытия выпадающего меню при клике
+document.querySelector('.user-avatar').addEventListener('click', function() {
+  document.querySelector('.profile-menu').style.display = 'block';
+});
+
+// Закрытие меню при клике вне меню
+window.onclick = function(event) {
+  if (!event.target.matches('.user-avatar')) {
+    var dropdowns = document.getElementsByClassName("profile-menu");
+    for (var i = 0; i < dropdowns.length; i++) {
+      var openDropdown = dropdowns[i];
+      if (openDropdown.style.display === 'block') {
+        openDropdown.style.display = 'none';
+      }
+    }
+  }
+};
 </script>
 
 </body>
